--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img src="/img/projek1.png" class="card-img-top" alt="Project 1">
                     <div class="card-body">
                         <h5 class="card-title"><a href="https://github.com/rozalyne/PROJEK_LARAVEL_SIMAK" target="_blank">Projek SIMAK</a></h5>
-                        <p class="card-text description">Website SIMAK (Sistem Akademik Mahasiswa) yang dibuat menggunakan Laravel. Dalam Rangka Tugas Kuliah.</p>
+                        <p class="card-text description">Website SIMAK (Sistem Informasi Akademik) yang dibuat menggunakan Laravel. Dalam Rangka Tugas Kuliah.</p>
                     </div>
                 </div>
             </div>
