--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </main>
 
 <footer class="text-center py-4">
-    <p>&copy; 2024 Portofolio Saya</p>
+    <p>&copy; 2024 Ricky Erlangga Handoko</p>
 </footer>
 
 <script src="script.js"></script>
