--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             I have a keen interest in backend development, particularly in Server-side/Back-end.<br></br> I am currently expanding my skills in JavaScript to strengthen my proficiency in this area.
         </p>
     </section>
-
+    w   
     <section class="container mt-5">
-        <h1 class="pb-3">Projek Saya</h1>
+        <h1 class="pb-3">Projek</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
@@ -45,7 +45,7 @@
             <!-- Tambahkan item portofolio lainnya di sini -->
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="/img/bocchi.jpg" class="card-img-top" alt="Project 1">
+                    <img src="/img/bocchi.jpg" class="card-img-top" alt="Project 2">
                     <div class="card-body">
                         <h5 class="card-title"><a href="#" target="_blank">Istri Gwech</a></h5>
                         <p class="card-text description">ini istri gw namanya Hitori Gotoh atau sering di panggil bocchi</p>
@@ -55,7 +55,7 @@
 
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="/img/hufuri.jpeg" class="card-img-top" alt="Project 1">
+                    <img src="/img/hufuri.jpeg" class="card-img-top" alt="Project 3">
                     <div class="card-body">
                         <h5 class="card-title"><a href="#" target="_blank">My Beloved FuriTao</a></h5>
                         <p class="card-text description">Merupakan kedua istri saya,Hutao dan Furina.</p>
@@ -66,8 +66,8 @@
     </section>
 
     <section class="container mt-5">
-        <h2>Projek Saya</h2>
-        <p>Deskripsi singkat mengenai projek-projek yang telah saya kerjakan.</p>
+        <h2>Education and Experience</h2>
+        <p></p>
     </section>
 
     <section class="container mt-5">
