change default mode

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
-<body class="light-mode">
+<body class="dark-mode">
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,14 +21,14 @@
 </header>
 
 <main role="main">
-
-
     <section class="container mt-5">
-        <h2>Hi! 👋,I'm Ricky Erlangga Handoko</h2>
-        <br>I am a graduate from Wikrama Bogor School, majoring in Software Engineering. Currently, I am exploring backend development and pursuing a degree in Computer Engineering.
-            I have a keen interest in backend development, particularly in Server-side/Back-end.<br></br> I am currently expanding my skills in JavaScript to strengthen my proficiency in this area.
+        <h2>Hi! 👋, I'm Ricky Erlangga Handoko</h2>
+        <p>
+            I am a graduate from Wikrama Bogor School, majoring in Software Engineering. Currently, I am exploring backend development and pursuing a degree in Computer Engineering.
+            I have a keen interest in backend development, particularly in Server-side/Back-end. I am currently expanding my skills in JavaScript to strengthen my proficiency in this area.
         </p>
     </section>  
+
     <section class="container mt-5">
         <h1 class="pb-3">Projek</h1>
         <div class="row">
@@ -47,17 +47,16 @@
                     <img src="/img/bocchi.jpg" class="card-img-top" alt="Project 2">
                     <div class="card-body">
                         <h5 class="card-title"><a href="#" target="_blank">Istri Gwech</a></h5>
-                        <p class="card-text description">ini istri gw namanya Hitori Gotoh atau sering di panggil bocchi</p>
+                        <p class="card-text description">Ini istri gw namanya Hitori Gotoh atau sering dipanggil bocchi</p>
                     </div>
                 </div>
             </div>
-
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                     <img src="/img/hufuri.jpeg" class="card-img-top" alt="Project 3">
                     <div class="card-body">
                         <h5 class="card-title"><a href="#" target="_blank">My Beloved FuriTao</a></h5>
-                        <p class="card-text description">Merupakan kedua istri saya,Hutao dan Furina.</p>
+                        <p class="card-text description">Merupakan kedua istri saya, Hutao dan Furina.</p>
                     </div>
                 </div>
             </div>
@@ -66,12 +65,17 @@
 
     <section class="container mt-5">
         <h2>Education and Experience</h2>
-        <p></p>
+        <div class="vertical-line">
+            <p><b>2019 - 2022</b> Wikrama Vocational Highschool, Software Engineering</p>
+            <p><b>2023 - 2025</b> Pakuan University, Informatics Management</p>
+        </div>
     </section>
 
     <section class="container mt-5">
-        <h2>Alat yang Digunakan</h2>
-        <p>Daftar alat atau teknologi yang sering saya gunakan dalam pengembangan projek.</p>
+        <h2>STACK</h2>
+        <div>
+            <p>Daftar alat atau teknologi yang sering saya gunakan dalam pengembangan projek.</p>
+        </div>
     </section>
 </main>
 
