--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <main role="main">
     <section class="container mt-5">
-        <h2 style="text-decoration: underline;">Hi! 👋, I'm Ricky Erlangga Handoko</h2>
+        <h2 >Hi! 👋, I'm Ricky Erlangga Handoko</h2>
+        <img src="/img/bocchi.jpg" class="image-profile" alt="Project 2">
         <p>
             I am a graduate from Wikrama Bogor School, majoring in Software Engineering. Currently, I am exploring backend development and pursuing a degree in Computer Engineering.
             I have a keen interest in backend development, particularly in Server-side/Back-end. I am currently expanding my skills in JavaScript to strengthen my proficiency in this area.
