"Removed two image files and updated index.html to replace an image and modify corresponding text"

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="/img/bocchi.jpg" class="card-img-top" alt="Project 2">
+                    <img src="/img/portofolio.PNG" class="card-img-top" alt="Project 2">
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#" target="_blank">Istri Gwech</a></h5>
-                        <p class="card-text description">Ini istri gw namanya Hitori Gotoh atau sering dipanggil bocchi</p>
+                        <h5 class="card-title"><a href="https://github.com/rozalyne/portofolio" target="_blank">Portofolio Website</a></h5>
+                        <p class="card-text description">A collection of projects and experiences that showcase my skills, I'm passionate about building innovative solutions.</p>
                     </div>
                 </div>
             </div>
