"Updated image and text for Project 3 card"

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="/img/hufuri.jpeg" class="card-img-top" alt="Project 3">
+                    <img src="/img/mumumu.png" class="card-img-top" alt="Project 3">
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#" target="_blank">My Beloved FuriTao</a></h5>
-                        <p class="card-text description">Merupakan kedua istri saya, Hutao dan Furina.</p>
+                        <h5 class="card-title"><a href="#" target="_blank">Mumumumu Bocchi</a></h5>
+                        <p class="card-text description">Clone of https://github.com/caliphdev herta_kuru but Bocchi mumumu Version </p>
                     </div>
                 </div>
             </div>
