"Updated image file and changed heading tags from h5 to h3 in index.html"

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="card mb-4 shadow-sm">
                     <img src="/img/projek1.png" class="card-img-top" alt="Project 1">
                     <div class="card-body">
-                        <h5 class="card-title"><a href="https://github.com/rozalyne/PROJEK_LARAVEL_SIMAK" target="_blank">Projek SIMAK</a></h5>
+                        <h3 class="card-title"><a href="https://github.com/rozalyne/PROJEK_LARAVEL_SIMAK" target="_blank">Projek SIMAK</a></h3>
                         <p class="card-text description">Website SIMAK (Sistem Informasi Akademik) yang dibuat menggunakan Laravel. Dalam Rangka Tugas Kuliah.</p>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                 <div class="card mb-4 shadow-sm">
                     <img src="/img/portofolio.PNG" class="card-img-top" alt="Project 2">
                     <div class="card-body">
-                        <h5 class="card-title"><a href="https://github.com/rozalyne/portofolio" target="_blank">Portofolio Website</a></h5>
+                        <h3 class="card-title"><a href="https://github.com/rozalyne/portofolio" target="_blank">Portofolio Website</a></h3>
                         <p class="card-text description">A collection of projects and experiences that showcase my skills, I'm passionate about building innovative solutions.</p>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="card mb-4 shadow-sm">
                     <img src="/img/mumumu.png" class="card-img-top" alt="Project 3">
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#" target="_blank">Mumumumu Bocchi</a></h5>
+                        <h3 class="card-title"><a href="https://github.com/rozalyne/mumumumu-bocchi" target="_blank">Mumumumu Bocchi</a></h3>
                         <p class="card-text description">Clone of https://github.com/caliphdev herta_kuru but Bocchi mumumu Version </p>
                     </div>
                 </div>
