"Updated index.html to add Font Awesome stylesheet, new footer layout with social media icons, and Bootstrap 5 scripts; added margin styling for social icons in style.css"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ricky Erlangga Handoko</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="style.css" rel="stylesheet">
 </head>
 <body class="dark-mode">
@@ -154,10 +155,27 @@
                 
 </main>
 
-<footer class="text-center py-4">
-    <p>&copy; 2024 Ricky Erlangga Handoko</p>
-</footer>
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <span class="mb-3 mb-md-0 text-body-secondary h5">© 2024 Ricky Erlangga Handoko</span>
+      </div>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex social-icons">
+        <!-- Logo media sosial menggunakan Font Awesome -->
+        <li><a href="https://www.linkedin.com/in/ricky-erlangga-handoko/"><i class="fab fa-linkedin h3"></i></a></li>
+        <li><a href="https://www.instagram.com/rozalynei_/"><i class="fab fa-instagram h3"></i></a></li>
+        <li><a href="https://github.com/rozalyne"><i class="fab fa-github h3"></i></a></li>
+      </ul>
+    </footer>
+  </div>
 
+  <!-- Bootstrap JS (optional, for responsive features) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap Icons -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
