--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="style.css" rel="stylesheet">
+
+    <link rel="icon" href="img/bocchi.jpg" type="image/icon type">
+
 </head>
 <body class="dark-mode">
 
